# shriven_zenith

./: .env  .gitignore  CLAUDE.md  CMakeLists.txt  ENHANCEMENT_TRACKER.md  README.md  config.toml  shriven_zenith_guide.md  test_binance_ws.py
.githooks/: pre-commit
.github/workflows/: audit.yml
auditor/: CMakeLists.txt  README.md  audit_main.cpp  claude_auditor.cpp  claude_auditor.h
bldg_blocks/: BldgBlocksConfig.cmake.in  CMakeLists.txt  config.h  config.h.in  lf_queue.h  logging.cpp  logging.h  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  perf_utils.h  socket.h  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_utils.h  time_utils.h  types.h
cmake/build-coverage/: .ninja_deps  .ninja_log  build.ninja
cmake/build-coverage-gcc/: .ninja_deps  .ninja_log  build.ninja  coverage_base.info
cmake/build-coverage-gcc/tests/: benchmark_common  test_lf_queue  test_logger  test_mem_pool  test_zero_policy
cmake/build-coverage/examples/: examples
cmake/build-coverage/tests/: benchmark_common  test_lf_queue  test_logger  test_mem_pool  test_thread_utils  test_zero_policy
cmake/build-debug/: .ninja_deps  .ninja_log  build.ninja
cmake/build-debug/auditor/: CTestTestfile.cmake  claude_audit
cmake/build-debug/examples/: examples
cmake/build-debug/tests/: benchmark_enhancements  test_binance  test_binance_ws  test_zerodha_auth
cmake/build-release/: .ninja_deps  .ninja_log  build.ninja
cmake/build-release/auditor/: CTestTestfile.cmake  claude_audit
cmake/build-release/bldg_blocks/: BldgBlocksConfig.cmake
cmake/build-release/examples/: examples
cmake/build-strict-debug/: .ninja_deps  .ninja_log  build.ninja
cmake/build-strict-release/: .ninja_deps  .ninja_log  build.ninja
common/: CMakeLists.txt  CommonConfig.cmake.in  README.md  config.h.in  lf_queue.h  lf_queue_v2.h  logging.cpp  logging.h  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  mem_pool_v2.h  perf_utils.h  runtime_assert.h  socket.h  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  test_enhancements.cpp  thread_utils.h  thread_utils_v2.h  time_utils.h  types.h
config/: CMakeLists.txt  config.cpp  config.h  config.toml  config_manager.cpp  config_manager.h  instruments_config.txt  master_config.txt
data/cache/: zerodha_access_token.cache
data/instruments/: binance_symbols_20250902.csv
docs/: README.md  TODO_STATUS.md  ZERODHA_IMPLEMENTATION_PLAN.md  audit_fixes_20250903.md  index.md  technical_documentation.md  trading_build_plan.md  trading_implementation_tracker.md  trading_system_complete.md
docs/api/: README.md
docs/architecture/: 01_system_overview.md  02_bldg_blocks_architecture.md  cache_aligned_implementation.md  index.md
docs/binance_docs/: orderbook_management.md  websocket_streams.md
docs/components/: README.md  binance_websocket.md
docs/developer_guide/: README.md  README_DOCS.md  bldg_blocks_api.md  developer_guide.md  index.md  naming_convention.md
docs/end_user_guide/: index.md
docs/implementation/: instrument_fetcher.md
docs/kite_docs/: 02_websocket_streaming.md  04_orders_api.md  05_market_quotes_instruments.md  06_portfolio_api.md  07_historical_data_api.md  08_errors_exceptions.md  09_postbacks_webhooks.md  11_troubleshooting_websocket.md
docs/performance/: benchmarks.md
docs/reports/: compiler_warnings_lessons.md  development_record_001_cache_aligned.md  index.md
docs/trackers/: enhancement_tracker.md  index.md
examples/: CMakeLists.txt  example_main.cpp  lf_queue_example.cpp  lf_queue_examples.h  mem_pool_example.cpp  mem_pool_examples.h  thread_example.cpp  thread_examples.h
kite_docs/: 00_complete_summary.md  01_main_api_overview.md  03_authentication_flow.md  10_python_sdk_examples.md
scripts/: build.sh  build_coverage.sh  build_coverage_gcc.sh  build_strict.sh
tests/: CMakeLists.txt  debug_instruments.cpp  test_binance.cpp  test_binance_ws.cpp.disabled  test_cache_aligned  test_cache_aligned.cpp  test_config.cpp  test_instrument_fetcher.cpp  test_kite_ws.cpp  test_lf_queue.cpp  test_zerodha_auth.cpp
tests/benchmarks/: benchmark_common.cpp  benchmark_enhancements.cpp
tests/coverage/: 234420-18405741577582834314_0.profraw  234420-2662299107698032514_0.profraw  234486-18405741577582834314_0.profraw  234486-2663004945926471554_0.profraw  234672-18405741577582834314_0.profraw  234672-2682612252666642306_0.profraw  234980-18405741577582834314_0.profraw  234980-2656343006497357698_0.profraw  236461-18405741577582834314_0.profraw  236461-2662299107698032514_0.profraw  236473-18405741577582834314_0.profraw  236473-2656343006497357698_0.profraw  COVERAGE_ANALYSIS.txt  COVERAGE_REPORT.md  coverage.lcov  coverage.profdata  summary.txt
tests/coverage/html/: index.html
tests/coverage/html/coverage/home/isoula/om/shriven_zenith/bldg_blocks/: logging.h.html  macros.h.html  mem_pool.h.html  time_utils.h.html
tests/unit/: test_lf_queue.cpp  test_logger.cpp  test_mem_pool.cpp  test_thread_utils.cpp  test_zero_policy.cpp
trading/: CMakeLists.txt  config_manager.cpp  trader_main.cpp
trading/auth/binance/: binance_auth.cpp  binance_auth.h
trading/auth/zerodha/: zerodha_auth.cpp  zerodha_auth.h
trading/market_data/: instrument_fetcher.h  market_data_consumer.h  order_book.h
trading/market_data/binance/: binance_instrument_fetcher.cpp  binance_instrument_fetcher.h  binance_ws_client.cpp  binance_ws_client.h
trading/market_data/zerodha/: kite_symbol_resolver.h  kite_ws_client.cpp  kite_ws_client.h  zerodha_instrument_fetcher.cpp  zerodha_instrument_fetcher.h
trading/order_gw/: order_gateway.h
trading/order_gw/binance/: binance_order_gateway.cpp  binance_order_gateway.h
trading/order_gw/zerodha/: zerodha_order_gateway.cpp  zerodha_order_gateway.h
trading/strategies/: strategy.h
trading/strategy/: feature_engine.cpp  feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  order_manager.cpp  order_manager.h  position_keeper.cpp  position_keeper.h  risk_manager.cpp  risk_manager.h  trade_engine.cpp  trade_engine.h
(+27 files in other folders)
